Correct padding at top of wrap div.

--- a/resources/public/toto-mobile.css
+++ b/resources/public/toto-mobile.css
@@ -115,7 +115,7 @@ div#error {
 }
 
 div#wrap {
-    padding-top: 2.5em;
+    padding-top: 3.5em;
     overflow-x:hidden;
 }
 
